--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,30 @@
 asgiref==3.9.0
+certifi==2025.7.9
+charset-normalizer==3.4.2
+coreapi==2.3.3
+coreschema==0.0.4
+dj-database-url==3.0.1
 Django==5.2.4
+django-environ==0.12.0
 django-model-utils==5.0.0
 djangorestframework==3.16.0
 drf-secure-token==1.2.0
+gunicorn==23.0.0
+idna==3.10
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+packaging==25.0
 pillow==11.3.0
 psycopg==3.2.9
 psycopg2-binary==2.9.10
 PyMySQL==1.1.1
+requests==2.32.4
+ruamel.yaml==0.18.14
+ruamel.yaml.clib==0.2.12
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.14.0
+uritemplate==4.2.0
+urllib3==2.5.0
