--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-environ==0.12.0
 django-model-utils==5.0.0
 djangorestframework==3.16.0
 drf-secure-token==1.2.0
+drf-yasg==1.21.10
 gunicorn==23.0.0
 idna==3.10
 inflection==0.5.1
@@ -20,6 +21,8 @@ pillow==11.3.0
 psycopg==3.2.9
 psycopg2-binary==2.9.10
 PyMySQL==1.1.1
+pytz==2025.2
+PyYAML==6.0.2
 requests==2.32.4
 ruamel.yaml==0.18.14
 ruamel.yaml.clib==0.2.12
