--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-environ==0.12.0
 django-model-utils==5.0.0
 djangorestframework==3.16.0
 drf-secure-token==1.2.0
+django-cors-headers==4.1.0
 drf-yasg==1.21.10
 gunicorn==23.0.0
 idna==3.10
